# SkillDock

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/: CODEOWNERS  WORKFLOW_PERMISSIONS.md  skill-owners.json  supervisors.json
.github/workflows/: beta-release-approval.yml  beta-release-checks.yml  beta-release-post-merge.yml  desktop-cross-platform-build.yml  promote-stable-approval.yml  promote-stable-post-merge.yml  promotion-merge-queue.yml
docs/: desktop-stack-startup.md  operator-roles.md  technical-report-2026-03.md  technical-solution.md
scripts/: check-registry-schemas.mjs  dev-desktop-app.mjs  dev-local-api.mjs  enforce-promote-stable-approval.mjs  enforce-supervisor-approval.mjs  post-merge-beta-release-update.mjs  post-merge-promote-stable-update.mjs  run-regression-suite.mjs  run-security-scan.mjs  run-test-suite.mjs  start-desktop-stack.sh  stop-desktop-stack.sh
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: desktop_commands.rs  lib.rs  main.rs
src-tauri/src/commands/: desktop.rs
src/app/: app.css  app.tsx  redesign.css
src/components/: beta-release-panel.tsx  promote-stable-panel.tsx  source-manager.tsx  status-banner.tsx
src/hooks/: use-guarded-action.ts
src/lib/: desktop-api.ts
src/pages/: local-skills-page.tsx  (+3 more)
tests/: desktop-integration.check.mjs  e2e-release-flows.check.mjs  lifecycle.check.mjs  offline-mode.check.mjs  policy-integrity.check.mjs  service-startup-smoke.check.mjs  startup-script.check.mjs  tauri-project.check.mjs
(+42 files in other folders)
